# Skincare-recommended

./: README.md  __init__.py  app2.py  ingredient_to_concern_mapping.txt  pyproject.toml  routes.py  run.py
services/: data_loader.py  embedding.py  llm.py  prompt.py  sentiment.py
templates/: index.html
