[tool.poetry]
name = "skincare-suggestion"
version = "0.1.0"
description = "AI-powered skincare product recommender using Gemini and embeddings"
authors = ["haphuongng2812@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
sentence-transformers = "^2.2.2"
python-dotenv = "^1.0.1"
google-generativeai = "^0.4.1"
jinja2 = "^3.1.3"              # Flask templates
requests = "^2.31.0"           # For API calls if needed
tqdm = "^4.66.0"               # For progress bars (optional)
matplotlib = "^3.8.0" 
nltk = "^3.8.1"                # Thêm dòng này



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"